--- a/.gitignore
+++ b/.gitignore
@@ -70,7 +70,7 @@ typings/
 
 # dotenv environment variables file
 .env
-.env.development
+#.env.development
 .env.test
 
 # parcel-bundler cache (https://parceljs.org/)
